<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">C.N.R.S</string>
    <string name="BLANK"></string>
    <string name="STrain">Start Registration</string>
    <string name="SViewAll">All Registered faces</string>
    <string name="SSearch">Search</string>
    <string name="SDelete">Delete</string>
    <string name="SEnter">Enter face name, then pres Rec Button</string>
    <string name="SStopTrain">Stop Registering</string>
    <string name="SStopSearch">Stop Search</string>
    <string name="Straininig">Training...</string>
    <string name="SCanntoPredic">More then one face is needed to Recognize the facees</string>
    <string name="SIdle">Idle</string>
    <string name="SFaceName">Name:</string>
    <string name="SSearching">Searching</string>
    <string name="SFrontCamera">Front Camera</string>
    <string name="SBackCamera">Back Camera</string>
</resources>
