<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.88"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.88">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <org.opencv.javacv.facerecognition.Tutorial3View
                    android:id="@+id/tutorial3_activity_java_surface_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.88" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="120dp"
                    android:layout_height="140dp"
                    android:src="@drawable/lightbulb"
                    android:visibility="gone" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewState"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/SIdle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_green" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_yellow" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_red" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.07"
                android:text="@string/STrain"
                android:textOff="@string/STrain"
                android:textOn="@string/SStopTrain"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.71"
                android:text="@string/SFaceName"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.76"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone">

                <requestFocus />
            </EditText>


            <ToggleButton
                android:id="@+id/toggleButtonGrabar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Grabar"
                android:textOff="Rec"
                android:textOn="Stop"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonCat"
                android:layout_width="165dp"
                android:layout_height="68dp"
                android:text="@string/SViewAll" />

            <ToggleButton
                android:id="@+id/buttonBuscar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30px"
                android:layout_marginRight="30px"
                android:text="Stop Detecting Faces and Recognizing"
                android:textOff="Start Detecting Faces and Recognizing"
                android:textOn="Stop Detecting Faces and Recognizing" />


            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_stat_camera" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>